--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "preinstall": "npx tsc --outDir ./dist"
   },
   "author": "Dov Alperin",
   "repository": "https://github.com/DAlperin/remix-redis-session",
